<resources>
    <string name="app_name">ALifeJetpack</string>
    <string name="set_value">set_value</string>
    <string name="post_value">post_value</string>
    <string name="set_value_self">set_value_2_self</string>
    <string name="post_value_self">post_value_2_self</string>
    <string name="set_value_child">set_value_2_child</string>
    <string name="post_value_child">post_value_2_child</string>
    <string name="set_value_main">set_value_2_main</string>
    <string name="post_value_main">post_value_2_main</string>
    <string name="go_2_child">go to child</string>
    <string name="lifecycle_child">go to child</string>
    <string name="increment">increment</string>
    <string name="common">common:</string>
    <string name="view_model">view_model:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navi_2_fragment">go to fragment</string>
    <string name="navi_3_fragment">go to fragment with args</string>

    <string name="toolbar">toolbar</string>
    <string name="bottom_menu">bottom_menu</string>
    <string name="drawer_layout">drawerLayout</string>

    <string name="home">首页</string>
    <string name="setting">设置</string>
    <string name="network">网络</string>
    <string name="deep_link">Deep Link</string>
    <string name="send_notification">send notification</string>
</resources>
